mental-health-admin/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mental-health
  labels:
    name: mental-health
